[package]
name = "relayx"
description = "A TCP client with shell-like interface."
keywords = ["tcp", "client", "network", "shell"]
repository = "https://github.com/kostya-zero/relayx"
homepage = "https://github.com/kostya-zero/relayx"
license = "MIT"
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
readme = "README.md"
version = "0.2.0-dev"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
thiserror = "2.0.17"
toml = "0.9.8"

[profile.dev]
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
lto = "thin"
debug = 0
strip = true
